<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/paddingVertical"
    android:background="@drawable/img_background"
    android:id="@+id/mainlayout"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/paddingVertical"
        android:layout_marginLeft="@dimen/paddingHorizontal"
        android:layout_marginRight="@dimen/paddingHorizontal"
        cardview:cardBackgroundColor="@android:color/white"
        cardview:cardCornerRadius="@dimen/d_2dp"
        cardview:cardElevation="@dimen/d_4dp"
        cardview:cardUseCompatPadding="true"
        android:id="@+id/cardview">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="@dimen/paddingSmall"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop"
                    android:fontFamily="sans-serif-light"
                    android:text=" "
                    android:background="@color/colorAccent"
                    android:textSize="@dimen/loginTxtFont"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_marginLeft="@dimen/marginLeft"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/loginTxtFont"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_usrname"
                    android:layout_below="@+id/textlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_marginLeft="@dimen/paddingSmall"
                    android:layout_marginRight="@dimen/paddingSmall">

                    <EditText
                        android:id="@+id/etd_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:padding="@dimen/paddingSmall"
                        android:textColor="@color/grey" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_below="@+id/input_layout_usrname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paddingSmall"
                    android:layout_marginStart="@dimen/paddingSmall"
                    android:layout_marginEnd="@dimen/paddingSmall">

                    <EditText
                        android:id="@+id/etd_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwd"
                        android:inputType="textPassword"
                        android:padding="@dimen/paddingSmall"
                        android:textColor="@color/grey" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/ivBtnToggle"
                    android:contentDescription="@string/app_name"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_marginEnd="@dimen/marginTop"
                    android:layout_below="@+id/input_layout_usrname"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_visibility"
                    android:onClick="pssdOnOff" />

                <!--!!!..... Loyout Go....!!!!-->
                <FrameLayout
                    android:id="@+id/layoutGo"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginLeft"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="@dimen/btnHeight"
                    android:background="@drawable/stroke_button">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/go"
                        android:textColor="@color/grey"/>
                    <FrameLayout
                        android:id="@+id/layoutDone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:visibility="gone">

                        <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_done_"/>

                    </FrameLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/textForgot"
                    android:layout_below="@+id/layoutGo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/marginTop"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/str_forgt_passwd"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/txtFont"
                    android:textStyle="bold" />

                <!--!!!....Reg LAyout....!!!!-->
                <LinearLayout
                    android:id="@+id/linearReg"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/reltvlayoutReg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/textReg"
                            android:layout_width="@dimen/paddingSmall"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:fontFamily="sans-serif-light"
                            android:text=" "
                            android:background="@android:color/white"
                            android:textSize="@dimen/loginTxtFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textRegst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginLeft="@dimen/marginLeft"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/register"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/loginTxtFont"
                            android:textStyle="bold" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_reg_username"
                            android:layout_below="@+id/textReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marginTop"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/etd_reg_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"
                                android:padding="@dimen/paddingSmall"
                                android:textColor="@android:color/white" />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_reg_password"
                            android:layout_below="@+id/input_layout_reg_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/marginTop"
                            android:layout_marginRight="@dimen/marginTop"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/etd_reg_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/passwd"
                                android:inputType="textPassword"
                                android:padding="@dimen/paddingSmall"
                                android:textColor="@android:color/white" />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_reg_repet_password"
                            android:layout_below="@+id/input_layout_reg_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginLeft="@dimen/marginTop"
                            android:layout_marginRight="@dimen/marginTop"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/etd_reg_repet_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/reptpasswd"
                                android:inputType="textPassword"
                                android:padding="@dimen/paddingSmall"
                                android:textColor="@android:color/white" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/btnNext"
                            android:layout_below="@id/input_layout_reg_repet_password"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_centerHorizontal="true"
                            android:layout_width="@dimen/btnWidth"
                            android:layout_height="@dimen/btnHeight"
                            android:background="@android:color/white"
                            android:text="@string/nxt"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"/>


                        </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="@dimen/circularBtnSize"
        android:layout_height="@dimen/circularBtnSize"
        android:layout_marginRight="@dimen/paddingSmall"
        android:layout_marginLeft="@dimen/paddingSmall"
        android:layout_marginTop="@dimen/d_70dp"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:elevation="@dimen/d_4dp">

        <FrameLayout
            android:id="@+id/frameCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button" />

        <ImageView
            android:id="@+id/iv_plus"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add"
            android:onClick="launchRegScreen"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:padding="@dimen/paddingSmall"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/loginTxtFont"
        android:textStyle="bold" />

</RelativeLayout>